removed an obsoleted parameeter